data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_281.wast
;; 2. **Mismatched Operand Stack in Loop:**    - Test Description: Within a loop structure, include a `br` instruction that inappropriately unwinds the operand stack, ignoring the correct stack height and leading to execution of an `unreachable` instruction inside the loop.    - Constraint: This test ensures the operand stack is properly unwound when branching back to the beginning of a loop.

(assert_invalid
  (module (func $mismatched-operand-stack-in-loop 
    (loop (result i32) 
      (i32.const 1) 
      (br 0) 
      (unreachable) 
    )
    (drop)
  ))
  "type mismatch"
)